Ograniczenie pojemnosci warsztatow

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -97,12 +97,13 @@
                                         <div class="slot-content" style="background: none !important;">
                                             <h5 class="slot-title" itemprop="name">
                                                 <label style="font-weight: normal !important;">
-                                                    <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{title}}" {{ifIn title previous}}> {{ title }}
+                                                    <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{title}}" {{ifIn title previous}} {{ifOver capacity popularity title}}> {{ title }}
                                                 </label>
                                                 <span style="cursor: pointer; color: #5195EA; font-size: 0.7em; padding-left: 10px" data-toggle="modal" data-target="#sessionDetail-{{ id }}">
                                                     czytaj więcej  &#10140;
                                                 </span>
                                             </h5>
+                                            <div>Miejsca: {{value title popularity}} / {{capacity}}</div>
                                             <ul class="slot-speakers">
                                                 {{#each speakers}}
                                                     <li itemprop="performer">
