Ids for sessions

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -97,7 +97,7 @@
                                         <div class="slot-content" style="background: none !important;">
                                             <h5 class="slot-title" itemprop="name">
                                                 <label style="font-weight: normal !important;">
-                                                    <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{title}}" {{ifIn title previous}} {{ifOver capacity popularity title}}> {{ title }}
+                                                    <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{id}}" {{ifIn title previous}} {{ifOver capacity popularity title}}> {{ title }}
                                                 </label>
                                                 <span style="cursor: pointer; color: #5195EA; font-size: 0.7em; padding-left: 10px" data-toggle="modal" data-target="#sessionDetail-{{ id }}">
                                                     czytaj więcej  &#10140;
