--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -92,7 +92,7 @@
                                                     czytaj więcej  &#10140;
                                                 </span>
                                             </h5>
-                                            <div>Miejsca: {{value title popularity}} / {{capacity}}</div>
+                                            <div>Zajęte miejsca: {{value title popularity}} / {{capacity}}</div>
                                             <ul class="slot-speakers">
                                                 {{#each speakers}}
                                                     <li itemprop="performer">
