--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -90,63 +90,73 @@
                             </time>
                         </div>
 
-                        <div class="workshops col-md-7" style="border-bottom: 1px solid #e7e7e7; display: flex; flex-direction: column; padding: 0px;">
-                            <h5>Warsztaty</h5>
-                            {{#each workshops}}
-                                <div id="session-{{ id }}" class="slot col-md-12">
-                                    <div class="slot-content-wrapper col-md-12">
-                                        <div class="slot-content" style="background: none !important;">
-                                            <h5 class="slot-title" itemprop="name">
-                                                <label style="font-weight: normal !important;">
-                                                    <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{id}}" {{ifIn title previous}} {{ifOver capacity popularity title}}> {{ title }}
-                                                </label>
-                                                <span style="cursor: pointer; color: #5195EA; font-size: 0.7em; padding-left: 10px" data-toggle="modal" data-target="#sessionDetail-{{ id }}">
-                                                    czytaj więcej  &#10140;
-                                                </span>
-                                            </h5>
-                                            <div>Zajęte miejsca: {{value title popularity}} / {{capacity}}</div>
-                                            <ul class="slot-speakers">
-                                                {{#each speakers}}
-                                                    <li itemprop="performer">
-                                                        <div class="speaker-img flow-img img-circle" style="background-image: url('//bytebay.pl/img/people/{{thumbnailUrl}}')"></div>
-                                                        <p class="speaker-name">{{ name }} {{ surname }}</p>
-                                                    </li>
-                                                {{/each}}
-                                            </ul>
+                        <div class="workshops col-md-10" style="border-bottom: 1px solid #e7e7e7; padding: 0px;">
+                            <div class="col-md-6">
+                                <h5>Warsztaty</h5>
+                                {{#each workshops}}
+                                    <div id="session-{{ id }}" class="slot col-md-12">
+                                        <div class="slot-content-wrapper col-md-12">
+                                            <div class="slot-content" style="min-height: 150px; background: none !important;">
+                                                <h5 class="slot-title" itemprop="name">
+                                                    <label style="font-weight: normal !important;">
+                                                        <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{id}}" {{ifIn title previous}} {{ifOver capacity popularity title}}> {{ title }}
+                                                    </label>
+                                                    <span style="cursor: pointer; color: #5195EA; font-size: 0.7em; " data-toggle="modal" data-target="#sessionDetail-{{ id }}">
+                                                        czytaj więcej  &#10140;
+                                                    </span>
+                                                </h5>
+                                                <div>
+                                                    <span>
+                                                      Zajęte miejsca: {{value title popularity}} / {{capacity}}
+                                                    </span>
+                                                </div>
+                                                <div>
+                                                    <ul class="slot-speakers">
+                                                        {{#each speakers}}
+                                                            <li itemprop="performer">
+                                                                <div class="speaker-img flow-img img-circle" style="background-image: url('//bytebay.pl/img/people/{{thumbnailUrl}}')"></div>
+                                                                <p class="speaker-name">{{ name }} {{ surname }}</p>
+                                                            </li>
+                                                        {{/each}}
+                                                    </ul>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            {{/each}}
-                        </div>
+                                {{/each}}
+                            </div>
 
-                        <div class="workshops col-md-3"
-                             style="border-bottom: 1px solid #e7e7e7; display: flex; flex-direction: column; padding: 0px;">
-                            <h5>Sesje deep-dive</h5>
-                            {{#each deepdives}}
-                                <div id="session-{{ id }}" class="slot col-md-12">
-                                    <div class="slot-content-wrapper col-md-12">
-                                        <div class="slot-content" style="background: none !important;">
-                                            <h5 class="slot-title" itemprop="name">
-                                                <label style="font-weight: normal !important;">
-                                                    <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{id}}" {{ifIn title previous}} {{ifOver capacity popularity title}}> {{ title }}
-                                                </label>
-                                                <span style="cursor: pointer; color: #5195EA; font-size: 0.7em; padding-left: 10px" data-toggle="modal" data-target="#sessionDetail-{{ id }}">
-                                                    czytaj więcej  &#10140;
-                                                </span>
-                                            </h5>
-                                            <div>Zajęte miejsca: {{value title popularity}} / {{capacity}}</div>
-                                            <ul class="slot-speakers">
-                                                {{#each speakers}}
-                                                    <li itemprop="performer">
-                                                        <div class="speaker-img flow-img img-circle" style="background-image: url('//bytebay.pl/img/people/{{thumbnailUrl}}')"></div>
-                                                        <p class="speaker-name">{{ name }} {{ surname }}</p>
-                                                    </li>
-                                                {{/each}}
-                                            </ul>
+                            <div class="col-md-6">
+                                <h5>Sesje deep-dive</h5>
+                                <span>Sesje deep-dive nie mają limitu miejsc!</span>
+                                {{#each deepdives}}
+                                    <div id="session-{{ id }}" class="slot col-md-12">
+                                        <div class="slot-content-wrapper col-md-12">
+                                            <div class="slot-content" style="min-height: 150px; background: none !important;">
+                                                <h5 class="slot-title" itemprop="name">
+                                                    <label style="font-weight: normal !important;">
+                                                        <input type="radio" name="sessions-{{date}}-{{startTime}}" value="{{id}}" {{ifIn title previous}} {{ifOver capacity popularity title}}> {{ title }}
+                                                    </label>
+                                                    <span style="cursor: pointer; color: #5195EA; font-size: 0.7em; padding-left: 10px" data-toggle="modal" data-target="#sessionDetail-{{ id }}">
+                                                        czytaj więcej  &#10140;
+                                                    </span>
+                                                </h5>
+                                                <!--<div>Zajęte miejsca: {{value title popularity}} / {{capacity}}</div>-->
+                                                <div>
+                                                    <ul class="slot-speakers" style="display: block">
+                                                        {{#each speakers}}
+                                                            <li itemprop="performer">
+                                                                <div class="speaker-img flow-img img-circle" style="background-image: url('//bytebay.pl/img/people/{{thumbnailUrl}}')"></div>
+                                                                <p class="speaker-name">{{ name }} {{ surname }}</p>
+                                                            </li>
+                                                        {{/each}}
+                                                    </ul>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            {{/each}}
+                                {{/each}}
+                            </div>
                         </div>
 
                         </div>
