--- a/src/main/resources/templates/myagenda.hbs
+++ b/src/main/resources/templates/myagenda.hbs
@@ -38,6 +38,7 @@
 
                     {{#if this}}
                     <h6>{{ title }}</h6>
+                    <span class="theme-metadata"><span class="caption">Gdzie znajduje się sala: </span><strong>{{ location }}</strong></span>
                     <p class="theme-description">{{ breaklines description }}</p>
                     {{#if prerequisites}}
                         <div>
