Poprawka miejsca konferencji

--- a/src/main/resources/templates/index.twig
+++ b/src/main/resources/templates/index.twig
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <h2 class="white-text">
-                        14-15 marca 2019, Gdański Park Naukowo-Technologiczny
+                        23-24 marca 2020, Centrum konferencyjno – szkoleniowe Golden Floor Tower, Warszawa
                     </h2>
                     <h3 class="white-text pb-2">Rejestracja na warsztaty</h3>
                 </div>
